--- a/index.html
+++ b/index.html
@@ -99,14 +99,15 @@
             </nav>
             <div class="sidebar-footer">
                 <div class="user-info">
-                    <div class="user-avatar">JD</div>
+                    <div class="user-avatar"></div>
                     <div class="user-details">
-                        <div class="user-name" id="userName">John Doe</div>
-                        <div class="user-email" id="userEmail">john@acme.com</div>
-                    </div>
+                        <div class="user-name" id="userName"></div>
+                        <div class="user-email" id="userEmail"></div>
+                     </div>
                 </div>
                 <button id="logoutBtn" class="btn-logout">Logout</button>
             </div>
+
         </aside>
 
         <!-- Main Content -->
@@ -371,15 +372,15 @@
                     <form id="profileForm" class="settings-form">
                         <div class="form-group">
                             <label>Full Name</label>
-                            <input type="text" id="settingsFullName" value="John Doe">
+                            <input type="text" id="settingsFullName">
                         </div>
                         <div class="form-group">
                             <label>Email</label>
-                            <input type="email" id="settingsEmail" value="john@acme.com">
+                            <input type="email" id="settingsEmail">
                         </div>
                         <div class="form-group">
                             <label>Company Name</label>
-                            <input type="text" id="settingsCompany" value="Acme Corp">
+                            <input type="text" id="settingsCompany">
                         </div>
                         <button type="submit" class="btn btn-primary">Save Changes</button>
                     </form>
