--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="auth-card">
                 <div class="auth-header">
                     <h1 class="logo">🛡️ ChurnGuard</h1>
-                    <p class="auth-subtitle">Predict and prevent customer churn</p>
+                    <p class="auth-subtitle">Predict and Prevent Customer Churn</p>
                 </div>
                 <form id="loginForm" class="auth-form">
                     <div class="form-group">
@@ -25,11 +25,8 @@
                         <label for="loginPassword">Password</label>
                         <input type="password" id="loginPassword" required placeholder="••••••••">
                     </div>
-                    <button type="submit" class="btn btn-primary btn-block">Sign In</button>
+                    <button type="submit" class="btn btn-primary btn-block">Log In</button>
                 </form>
-                <div class="auth-footer">
-                    <p>Don't have an account? <a href="#" id="showRegister">Sign up</a></p>
-                </div>
             </div>
         </div>
     </div>
@@ -77,23 +74,18 @@
             </div>
             <nav class="sidebar-nav">
                 <a href="#" class="nav-item active" data-page="dashboard">
-                    <span class="nav-icon">📊</span>
                     Dashboard
                 </a>
                 <a href="#" class="nav-item" data-page="customers">
-                    <span class="nav-icon">👥</span>
                     Customers
                 </a>
                 <a href="#" class="nav-item" data-page="analytics">
-                    <span class="nav-icon">📈</span>
                     Analytics
                 </a>
                 <a href="#" class="nav-item" data-page="integrations">
-                    <span class="nav-icon">🔌</span>
                     Integrations
                 </a>
                 <a href="#" class="nav-item" data-page="settings">
-                    <span class="nav-icon">⚙️</span>
                     Settings
                 </a>
             </nav>
@@ -124,7 +116,6 @@
                 <!-- Metric Cards -->
                 <div class="metrics-grid">
                     <div class="metric-card">
-                        <div class="metric-icon blue">👥</div>
                         <div class="metric-content">
                             <div class="metric-label">Total Customers</div>
                             <div class="metric-value" id="totalCustomers">0</div>
@@ -138,14 +129,12 @@
                         </div>
                     </div>
                     <div class="metric-card">
-                        <div class="metric-icon orange">💰</div>
                         <div class="metric-content">
                             <div class="metric-label">At-Risk MRR</div>
                             <div class="metric-value" id="atRiskMRR">$0</div>
                         </div>
                     </div>
                     <div class="metric-card">
-                        <div class="metric-icon green">📊</div>
                         <div class="metric-content">
                             <div class="metric-label">Avg Health Score</div>
                             <div class="metric-value" id="avgHealthScore">0</div>
@@ -326,7 +315,6 @@
                 <div class="integrations-grid">
                     <div class="integration-card">
                         <div class="integration-header">
-                            <div class="integration-icon">💳</div>
                             <h3>Stripe</h3>
                         </div>
                         <p>Connect your Stripe account to automatically sync customer and payment data.</p>
@@ -339,7 +327,6 @@
 
                     <div class="integration-card disabled">
                         <div class="integration-header">
-                            <div class="integration-icon">📊</div>
                             <h3>HubSpot</h3>
                         </div>
                         <p>Sync customer engagement data from HubSpot CRM.</p>
@@ -350,7 +337,6 @@
 
                     <div class="integration-card disabled">
                         <div class="integration-header">
-                            <div class="integration-icon">☁️</div>
                             <h3>Salesforce</h3>
                         </div>
                         <p>Import customer data from Salesforce.</p>
