--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
         <div class="auth-container">
             <div class="auth-card">
                 <div class="auth-header">
-                    <h1 class="logo">🛡️ ChurnGuard</h1>
+                    <h1 class="logo">
+                        <img src="main logo.png" alt="ChurnGuard Logo" class="logo-img">
+                        <span>Churn Guard</span>
+                    </h1>
                     <p class="auth-subtitle">Predict and Prevent Customer Churn</p>
                 </div>
                 <form id="loginForm" class="auth-form">
@@ -36,7 +39,10 @@
         <div class="auth-container">
             <div class="auth-card">
                 <div class="auth-header">
-                    <h1 class="logo">🛡️ ChurnGuard</h1>
+                    <h1 class="logo">
+                        <img src="main logo.png" alt="ChurnGuard Logo" class="logo-img">
+                        <span>Churn Guard</span>
+                    </h1>
                     <p class="auth-subtitle">Create your account</p>
                 </div>
                 <form id="registerForm" class="auth-form">
@@ -70,7 +76,10 @@
         <!-- Sidebar -->
         <aside class="sidebar">
             <div class="sidebar-header">
-                <h1 class="logo">🛡️ ChurnGuard</h1>
+                <h1 class="logo">
+                        <img src="main logo.png" alt="ChurnGuard Logo" class="logo-img">
+                        <span>Churn Guard</span>
+                    </h1>
             </div>
             <nav class="sidebar-nav">
                 <a href="#" class="nav-item active" data-page="dashboard">
