--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="auth-card">
                 <div class="auth-header">
                     <h1 class="logo">
-                        <img src="logo logo.png" alt="ChurnGuard Logo" class="logo-img">
+                        <img src="logo logo 1.png" alt="ChurnGuard Logo" class="logo-img">
                         <span>Churn Guard</span>
                     </h1>
                     <p class="auth-subtitle">Predict and Prevent Customer Churn</p>
@@ -40,7 +40,7 @@
             <div class="auth-card">
                 <div class="auth-header">
                     <h1 class="logo">
-                        <img src="logo logo.png" alt="ChurnGuard Logo" class="logo-img">
+                        <img src="logo logo 1.png" alt="ChurnGuard Logo" class="logo-img">
                         <span>Churn Guard</span>
                     </h1>
                     <p class="auth-subtitle">Create your account</p>
@@ -77,7 +77,7 @@
         <aside class="sidebar">
             <div class="sidebar-header">
                 <h1 class="logo">
-                        <img src="logo logo.png" alt="ChurnGuard Logo" class="logo-img">
+                        <img src="logo logo 1.png" alt="ChurnGuard Logo" class="logo-img">
                         <span>Churn Guard</span>
                     </h1>
             </div>
