--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ChurnGuard - Customer Churn Prediction Platform</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="main main.png">
+    <link rel="icon" sizes="32x32" href="main main.png">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
