--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
                 <form id="loginForm" class="auth-form">
                     <div class="form-group">
                         <label for="loginEmail">Email</label>
-                        <input type="email" id="loginEmail" required placeholder="you@company.com">
+                        <input type="email" id="loginEmail" required>
                     </div>
                     <div class="form-group">
                         <label for="loginPassword">Password</label>
-                        <input type="password" id="loginPassword" required placeholder="••••••••">
+                        <input type="password" id="loginPassword" required>
                     </div>
                     <button type="submit" class="btn btn-primary btn-block">Log In</button>
                 </form>
