--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
             </nav>
             <div class="sidebar-footer">
                 <div class="user-info">
+                    <div class="user-avatar"></div>
                     <div class="user-details">
                         <div class="user-name" id="userName"></div>
                         <div class="user-email" id="userEmail"></div>
