--- a/index.html
+++ b/index.html
@@ -172,12 +172,25 @@
 
             <!-- Customers Page -->
             <div id="customersPage" class="page">
-                <div class="page-header">
-                    <h1>Customers</h1>
-                    <button class="btn btn-primary" id="addCustomerBtn">
-                        <span>+</span> Add Customer
-                    </button>
-                </div>
+  <div class="page-header">
+    <h1>Customers</h1>
+    <button class="btn btn-primary" id="addCustomerBtn">
+      <span>+</span> Add Customer
+    </button>
+  </div>
+
+  <table id="customersTable">
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th>Health</th>
+        <th>Risk</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
+</div>
+
 
                 <!-- Filters -->
                 <div class="filters-bar">
