--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                 </div>
 
                 <!-- Customers Table -->
-                <div class="card">
+                <!-- <div class="card">
                     <div class="table-container">
                         <table class="customers-table">
                             <thead>
@@ -219,11 +219,11 @@
                             </thead>
                             <tbody id="customersTableBody">
                                 <!-- Populated by JavaScript -->
-                            </tbody>
+                           <!--  </tbody>
                         </table>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <!-- Customer Detail Page -->
             <div id="customerDetailPage" class="page">
