--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     </h1>
             </div>
             <nav class="sidebar-nav">
-                <a href="#" class="nav-item active" data-page="dashboard">
+                <a href="#" class="nav-item" data-page="dashboard">
                     Dashboard
                 </a>
                 <a href="#" class="nav-item" data-page="customers">
