--- a/index.html
+++ b/index.html
@@ -195,17 +195,24 @@
     </select>
   </div>
 
-  <table id="customersTable">
-    <thead>
-      <tr>
-        <th>Name</th>
-        <th>Health</th>
-        <th>Risk</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
+ <div class="card">
+  <div class="table-container">
+    <table class="customers-table">
+      <thead>
+        <tr>
+          <th>Customer</th>
+          <th>Health</th>
+          <th>Risk</th>
+          <th>MRR</th>
+          <th>Contract End</th>
+          <th>Risk Reason</th>
+        </tr>
+      </thead>
+      <tbody id="customersTableBody"></tbody>
+    </table>
+  </div>
 </div>
+
 
 
 
