--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ChurnGuard - Customer Churn Prediction Platform</title>
+    <title>Customer Churn Prediction Platform</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" sizes="100x100" href="main main.png">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
