--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <div class="page-header">
                     <h1>Dashboard</h1>
                     <button class="btn btn-primary" id="syncDataBtn">
-                        <span>🔄</span> Sync Data
+                        <span></span> Sync Data
                     </button>
                 </div>
 
