--- a/index.html
+++ b/index.html
@@ -302,38 +302,32 @@
                 </div>
 
                 <div class="card">
-                    <h3>Top Churn Drivers</h3>
-                    <div id="churnDrivers" class="drivers-list">
-                        <div class="driver-item">
-                            <div class="driver-label">Low Login Activity</div>
-                            <div class="driver-bar">
-                                <div class="driver-fill" style="width: 75%"></div>
-                            </div>
-                            <div class="driver-value">75%</div>
-                        </div>
-                        <div class="driver-item">
-                            <div class="driver-label">High Support Tickets</div>
-                            <div class="driver-bar">
-                                <div class="driver-fill" style="width: 60%"></div>
-                            </div>
-                            <div class="driver-value">60%</div>
-                        </div>
-                        <div class="driver-item">
-                            <div class="driver-label">Payment Issues</div>
-                            <div class="driver-bar">
-                                <div class="driver-fill" style="width: 45%"></div>
-                            </div>
-                            <div class="driver-value">45%</div>
-                        </div>
-                        <div class="driver-item">
-                            <div class="driver-label">Low Feature Adoption</div>
-                            <div class="driver-bar">
-                                <div class="driver-fill" style="width: 40%"></div>
-                            </div>
-                            <div class="driver-value">40%</div>
-                        </div>
-                    </div>
-                </div>
+  <h3>Revenue at Risk</h3>
+  <div class="metric-row">
+    <div>
+      <div class="metric-label">Expected MRR Loss</div>
+      <div id="expectedMrrLoss" class="metric-value">$0</div>
+    </div>
+    <div>
+      <div class="metric-label">Risk Ratio</div>
+      <div id="riskRatio" class="metric-value">0%</div>
+    </div>
+  </div>
+</div>
+
+<div class="card">
+  <h3>Risk Momentum</h3>
+  <table class="analytics-table">
+    <thead>
+      <tr>
+        <th>Customer</th>
+        <th>Trend</th>
+        <th>Δ Churn</th>
+      </tr>
+    </thead>
+    <tbody id="riskMomentumTable"></tbody>
+  </table>
+</div>
 
                 <div class="chart-card">
                     <h3>Revenue at Risk Over Time</h3>
