--- a/index.html
+++ b/index.html
@@ -276,11 +276,11 @@
                 </table>
             </div>
 
-            <div class="chart-card">
-                <h3>Revenue at Risk Over Time</h3>
-                <canvas id="revenueRiskChart"></canvas>
-            </div>
-        </div>
+            <div class="card" style="height: 300px;">
+  <h3>Revenue at Risk Over Time</h3>
+  <canvas id="revenueRiskChart"></canvas>
+</div>
+
 
         <!-- Integrations Page -->
         <div id="integrationsPage" class="page">
