--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                         <tr>
                             <th>Customer</th>
                             <th>Trend</th>
-                            <th>Δ Churn</th>
+                            <th>Risk Change</th>
                         </tr>
                     </thead>
                     <tbody id="riskMomentumTable"></tbody>
