--- a/index.html
+++ b/index.html
@@ -277,7 +277,11 @@
             </div>
 
             <div class="card" style="height: 300px;">
-  <h3>Revenue at Risk Over Time</h3>
+  <h3>Expected Revenue Loss Over Time</h3>
+<p class="chart-subtitle">
+  Based on current customer churn probability
+</p>
+
   <canvas id="revenueRiskChart"></canvas>
 </div>
 
